--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -42,7 +42,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: ${{ matrix.flutter_channel }}
-      - name: setup
+      - name: setup flutter
         shell: bash
         run: ${{ matrix.setup_script }}
       - name: install dependencies
