--- a/.github/workflows/deploy_app_store.yaml
+++ b/.github/workflows/deploy_app_store.yaml
@@ -36,8 +36,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: setup ruby
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7.2'
           bundler-cache: true
