--- a/.github/workflows/deploy_app_store.yaml
+++ b/.github/workflows/deploy_app_store.yaml
@@ -62,11 +62,9 @@ jobs:
         shell: bash
         run: .github/scripts/output_build_info.sh . && cat env.txt
 
-      - name: build
-        run: fastlane build_for_app_store
+      - run: bundle exec fastlane build_for_app_store
         working-directory: macos
-      - name: deploy
+      - run: bundle exec fastlane deploy_app_store
         # See: https://docs.github.com/en/actions/reference/environment-variables#default-environment-variables
         if: ${{ env.GITHUB_EVENT_NAME }} == "workflow_dispatch"
-        run: fastlane deploy_app_store
         working-directory: macos
