--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,9 @@
   "name": "pedax",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.x"
+  },
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
