--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ issue_tracker: https://github.com/sensuikan1973/pedax/issues
 version: 0.11.0-beta+14
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
-  sdk: ">=2.13.0 <3.0.0"
-  flutter: ^2.2.0 # See: https://flutter.dev/docs/development/tools/sdk/releases
+  sdk: ">=2.14.0-0 <3.0.0"
+  flutter: ^2.3.0-0 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
   crypto: ^3.0.1
