Follow flutter upgrade and upgrade linter (#152)
* follow flutter upgrade

* lint

* mild fix

* improve sdk version spcification

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ issue_tracker: https://github.com/sensuikan1973/pedax/issues
 version: 0.11.0-beta+14
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
-  sdk: ">=2.13.0 <3.0.0"
-  flutter: ^2.2.0 # See: https://flutter.dev/docs/development/tools/sdk/releases
+  sdk: ">=2.14.0-0 <3.0.0"
+  flutter: ^2.3.0-0 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
   crypto: ^3.0.1
@@ -41,12 +41,14 @@ dependencies:
   font_awesome_flutter: ^9.0.1
   intl: any # Use the pinned version from flutter_localizations
   libedax4dart:
-    ^0.13.0-beta
+    ^0.13.1-beta
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
   logger: ^1.0.0
   macos_secure_bookmarks: ^0.2.0
+  meta: ^1.4.0
+  path: ^1.8.0
   path_provider: ^2.0.2 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0
   shared_preferences: ^2.0.5
