--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^9.0.1
   intl: any # Use the pinned version from flutter_localizations
-  libedax4dart:
-    ^0.13.1-beta
+  libedax4dart: ^0.13.1-beta
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
