--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ issue_tracker: https://github.com/sensuikan1973/pedax/issues
 #
 # NOTE: you can't specify duplicated build number.
 # See: https://appstoreconnect.apple.com/apps/1557500142/buildactivity
-version: 1.0.0
+version: 1.0.0+15
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: ">=2.14.0-0 <3.0.0"
