--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -50,7 +50,12 @@ jobs:
       - name: install dependencies
         run: flutter pub get
 
+      - name: create app release
+        if: runner.os == 'Windows'
+        run: flutter pub run msix:create
+
       - name: debug
+        if: ${{ failure() }}
         uses: mxschmitt/action-tmate@v3
 
       - name: build
