--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -52,9 +52,9 @@ jobs:
       - name: build
         run: flutter build ${{ matrix.subcommand }} --${{ matrix.mode }}
 
-      - name: debug
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      # - name: debug
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3
 
       - name: prepare to pack
         shell: bash
