--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,3 +22,11 @@ updates:
       time: "10:00"
     labels: ["mac"]
     open-pull-requests-limit: 1
+
+  - package-ecosystem: "github-actions"
+    directory: "macos"
+    schedule:
+      interval: "monthly"
+      timezone: "Asia/Tokyo"
+      time: "10:00"
+    labels: ["GitHub Actions"]
