--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,8 +23,9 @@ updates:
     labels: ["mac"]
     open-pull-requests-limit: 1
 
+  # See: https://docs.github.com/ja/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/keeping-your-actions-up-to-date-with-dependabot
   - package-ecosystem: "github-actions"
-    directory: "macos"
+    directory: "/"
     schedule:
       interval: "monthly"
       timezone: "Asia/Tokyo"
