--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^9.1.0
   intl: any # Use the pinned version from flutter_localizations
-  libedax4dart: ^2.1.0
+  libedax4dart:
+    ^2.1.0
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   branch: xxx
@@ -64,7 +65,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  msix: ^2.3.0
+  msix: ^2.3.1
   pedantic_sensuikan1973: any
 
 flutter:
