--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -5,6 +5,7 @@ name: Upgrade Flutter Dependencies
 on:
   schedule:
     - cron: '0 1 * * 5' # every Friday, 01:00 (UTC)
+  workflow_dispatch:
 
 jobs:
   upgrade_flutter_dependencies:
