--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -18,11 +18,14 @@ jobs:
           channel: beta
       - run: flutter doctor -v
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
+
+      # See: https://github.com/peter-evans/create-pull-request/tree/master#reference-example
       - name: create PR
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.PAT }} # See: https://github.com/peter-evans/create-pull-request/blob/master/docs/concepts-guidelines.md#triggering-further-workflow-runs
           committer: GitHub <noreply@github.com>
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           commit-message: '[Scheduled] `flutter pub upgrade --null-safety`'
           title: '[Scheduled] `flutter pub upgrade --null-safety`'
           body: |
@@ -35,3 +38,5 @@ jobs:
           delete-branch: true
           base: main
           labels: 'dependencies'
+          assignees: sensuikan1973
+          reviewers: sensuikan1973
