--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   font_awesome_flutter: ^9.2.0
-  intl: any # Use the pinned version from flutter_localizations
+  intl: ^0.17.0 # Use the pinned version from flutter_localizations
   libedax4dart: ^2.1.0
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
@@ -64,8 +64,8 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  msix: ^2.4.2
-  pedantic_sensuikan1973: any
+  msix: ^2.5.3
+  pedantic_sensuikan1973: ^2.4.0
 
 flutter:
   uses-material-design: true
