--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       interval: "monthly"
       timezone: "Asia/Tokyo"
       time: "10:00"
-    labels: ["website"]
+    labels: ["website", "dependencies"]
 
   - package-ecosystem: "bundler"
     directory: "/macos"
@@ -19,7 +19,7 @@ updates:
       interval: "monthly"
       timezone: "Asia/Tokyo"
       time: "10:00"
-    labels: ["mac"]
+    labels: ["mac", "dependencies"]
 
   # See: https://docs.github.com/ja/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/keeping-your-actions-up-to-date-with-dependabot
   - package-ecosystem: "github-actions"
@@ -28,4 +28,4 @@ updates:
       interval: "monthly"
       timezone: "Asia/Tokyo"
       time: "10:00"
-    labels: ["GitHub Actions"]
+    labels: ["GitHub Actions", "dependencies"]
