improve integration test

--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -35,10 +35,9 @@ jobs:
         os: [windows-2019, macos-11]
         flutter_channel: [beta]
         include:
-          # TODO: https://github.com/sensuikan1973/pedax/issues/7
-          # - os: ubuntu-20.04
-          #   device: linux
-          #   setup_script: .github/scripts/setup_on_linux.sh
+          - os: ubuntu-20.04
+            device: linux
+            setup_script: .github/scripts/setup_on_linux.sh
           - os: windows-2019
             device: windows
             setup_script: .github/scripts/setup_on_windows.sh
@@ -56,6 +55,8 @@ jobs:
         run: ${{ matrix.setup_script }}
       - name: doctor
         run: flutter doctor -v
+      - name: devices
+        run: flutter devices
       - name: install dependencies
         run: flutter pub get
       - name: drive
