--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -32,18 +32,18 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-2019, macos-11]
+        os: [windows-2019, macos-11, ubuntu-20.04]
         flutter_channel: [beta]
         include:
-          - os: ubuntu-20.04
-            device: linux
-            setup_script: .github/scripts/setup_on_linux.sh
           - os: windows-2019
             device: windows
             setup_script: .github/scripts/setup_on_windows.sh
           - os: macos-11
             device: macos
             setup_script: .github/scripts/setup_on_macos.sh
+          - os: ubuntu-20.04
+            device: linux
+            setup_script: .github/scripts/setup_on_linux.sh
 
     steps:
       - uses: actions/checkout@v2
