--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -60,8 +60,7 @@ jobs:
       - name: debug build and run
         if: runner.os == 'Linux'
         run: |
-          flutter build linux --debug
           export DISPLAY="${DISPLAY:-:0}"
-          flutter run -d linux
+          flutter run -d linux --debug
       - name: drive
         run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
