fix broken yaml

--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -36,18 +36,15 @@ jobs:
         flutter_channel: [beta]
         include:
           - os: windows-2019
-            device: windows
             setup_script: .github/scripts/setup_on_windows.sh
-            # See: http://manpages.ubuntu.com/manpages/trusty/man1/xvfb-run.1.html
-            driver_test_command: 'timeout 180 xvfb-run -a flutter drive -d ${{ matrix.device }} --driver=integration_test/driver.dart --target=integration_test/app_test.dart || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
+            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d windows
           - os: macos-11
-            device: macos
             setup_script: .github/scripts/setup_on_macos.sh
-            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
+            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d macos
           - os: ubuntu-20.04
-            device: linux
             setup_script: .github/scripts/setup_on_linux.sh
-            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
+            # See: http://manpages.ubuntu.com/manpages/trusty/man1/xvfb-run.1.html
+            driver_test_command: 'timeout 180 xvfb-run -a flutter drive -d linux --driver=integration_test/driver.dart --target=integration_test/app_test.dart || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
 
     steps:
       - uses: actions/checkout@v2
