--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -32,19 +32,19 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-2019, macos-11]
+        os: [windows-2019, macos-11, ubuntu-20.04]
         flutter_channel: [beta]
         include:
-          # TODO: https://github.com/sensuikan1973/pedax/issues/7
-          # - os: ubuntu-20.04
-          #   device: linux
-          #   setup_script: .github/scripts/setup_on_linux.sh
           - os: windows-2019
-            device: windows
             setup_script: .github/scripts/setup_on_windows.sh
+            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d windows
           - os: macos-11
-            device: macos
             setup_script: .github/scripts/setup_on_macos.sh
+            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d macos
+          - os: ubuntu-20.04
+            setup_script: .github/scripts/setup_on_linux.sh
+            # See: http://manpages.ubuntu.com/manpages/trusty/man1/xvfb-run.1.html
+            driver_test_command: 'timeout 180 xvfb-run -a flutter drive -d linux --driver=integration_test/driver.dart --target=integration_test/app_test.dart || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
 
     steps:
       - uses: actions/checkout@v2
@@ -59,4 +59,4 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: drive
-        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
+        run: ${{ matrix.driver_test_command }}
