--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "/website"
     schedule:
-      interval: "monthly"
+      interval: "daily"
       timezone: "Asia/Tokyo"
       time: "10:00"
     labels: ["website", "dependencies"]
@@ -16,7 +16,7 @@ updates:
   - package-ecosystem: "bundler"
     directory: "/macos"
     schedule:
-      interval: "monthly"
+      interval: "daily"
       timezone: "Asia/Tokyo"
       time: "10:00"
     labels: ["mac", "dependencies"]
@@ -25,7 +25,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "daily"
       timezone: "Asia/Tokyo"
       time: "10:00"
     labels: ["GitHub Actions", "dependencies"]
