--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: run test
-        run: flutter test --concurrency=1 --coverage --coverage-path=./coverage/lcov.info
+        run: flutter test --concurrency=1 --verbose --coverage --coverage-path=./coverage/lcov.info
       - uses: codecov/codecov-action@v2.1.0
         with:
           file: ./coverage/lcov.info
