--- a/.github/workflows/deployment_macos_dry_run.yaml
+++ b/.github/workflows/deployment_macos_dry_run.yaml
@@ -3,9 +3,8 @@ name: Flutter Deployment MacOS dry-run
 on:
   pull_request:
     paths:
-      - 'pubspec.*'
-      - '.github/scripts/**'
       - 'macos/**'
+      - 'scripts/deploy_macos_app_to_app_store.sh'
       - '.github/workflows/deployment_macos_dry_run.yaml'
   push:
     branches: [main]
