--- a/.github/workflows/deployment_macos_dry_run.yaml
+++ b/.github/workflows/deployment_macos_dry_run.yaml
@@ -26,11 +26,6 @@ jobs:
       - name: dry-run deployment script
         shell: zsh {0}
         run: |
-          TAG=$GITHUB_SHA
+          REVISION=$GITHUB_SHA
           P8_PATH="dummy for dry-run"
-
-          ASC_KEY_ID="dummy for dry-run" \
-          ASC_ISSUER_ID="dummy for dry-run" \
-          APPLE_ID="dummy for dry-run" \
-          ITC_TEAM_ID="dummy for dry-run" \
-          ./scripts/deploy_macos_app_to_app_store.sh -tag $TAG -p8-file-path $P8_PATH --dry-run
+          ./scripts/deploy_macos_app_to_app_store.sh -revision $REVISION -p8-file-path $P8_PATH --dry-run
