--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,10 @@ dependencies:
   macos_secure_bookmarks: ^0.2.0
   meta: ^1.7.0
   path: ^1.8.0
-  path_provider: ^2.0.7 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
+  path_provider: ^2.0.8 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
+  path_provider_macos: ^2.0.4 # for test/widget_test_helper/libedax_assets.dart
   provider: ^6.0.1
-  shared_preferences: ^2.0.9
+  shared_preferences: ^2.0.11
   url_launcher: ^6.0.17
   window_size:
     git:
@@ -64,8 +65,8 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  msix: ^2.6.5
-  pedantic_sensuikan1973: ^2.5.0
+  msix: ^2.6.6
+  pedantic_sensuikan1973: ^2.8.0
 
 flutter:
   uses-material-design: true
