--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -52,11 +52,22 @@ jobs:
       matrix:
         os: [windows-2019, macos-11, ubuntu-20.04] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
         flutter_channel: [beta]
+        include:
+          - os: windows-2019
+            setup_script: .github/scripts/setup_on_windows.sh
+          - os: macos-11
+            setup_script: .github/scripts/setup_on_macos.sh
+          - os: ubuntu-20.04
+            setup_script: .github/scripts/setup_on_linux.sh
+
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
           channel: ${{ matrix.flutter_channel }}
+      - name: setup flutter
+        shell: bash
+        run: ${{ matrix.setup_script }}
       - name: doctor
         run: flutter doctor -v
       - name: install dependencies
