--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-2019, macos-11, ubuntu-20.04] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
-        flutter_channel: [beta]
+        flutter_channel: [beta, stable] # stable is debug for https://github.com/sensuikan1973/pedax/pull/260
         include:
           - os: windows-2019
             setup_script: .github/scripts/setup_on_windows.sh
