--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -34,33 +34,32 @@ jobs:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
         os: [ubuntu-20.04, windows-2019, macos-11]
-        flutter_channel: [beta]
         mode: [release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
           - os: ubuntu-20.04
             subcommand: linux
-            setup_script: .github/scripts/setup_on_linux.sh
+            setup_desktop_script: .github/scripts/setup_on_linux.sh
             prepare_to_pack_script: .github/scripts/prepare_to_pack_for_linux.sh
             distribution_path: build/linux/x64/release
           - os: windows-2019
             subcommand: windows
-            setup_script: .github/scripts/setup_on_windows.sh
+            setup_desktop_script: .github/scripts/setup_on_windows.sh
             prepare_to_pack_script: .github/scripts/prepare_to_pack_for_windows.sh
             distribution_path: build/windows/runner/Release
           - os: macos-11
             subcommand: macos
-            setup_script: .github/scripts/setup_on_macos.sh
+            setup_desktop_script: .github/scripts/setup_on_macos.sh
             prepare_to_pack_script: .github/scripts/prepare_to_pack_for_macos.sh
             distribution_path: build/macos/Build/Products/release
 
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-        with:
-          channel: ${{ matrix.flutter_channel }}
-      - name: setup flutter
+      - name: setup flutter channel
+        run: .github/scripts/setup_flutter_channel.sh
+      - name: setup flutter desktop
         shell: bash
-        run: ${{ matrix.setup_script }}
+        run: ${{ matrix.setup_desktop_script }}
       - name: doctor
         run: flutter doctor -v
       - name: install dependencies
