--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -28,8 +28,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-        with:
-          channel: beta
+      - name: setup flutter channel
+        run: .github/scripts/setup_flutter_channel.sh
       - run: flutter format -l 120 --set-exit-if-changed .
 
   analyze:
@@ -38,8 +38,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-        with:
-          channel: beta
+      - name: setup flutter channel
+        run: .github/scripts/setup_flutter_channel.sh
       - name: install dependencies
         run: flutter pub get
       - run: flutter analyze --fatal-infos --fatal-warnings .
@@ -51,12 +51,22 @@ jobs:
     strategy:
       matrix:
         os: [windows-2019, macos-11, ubuntu-20.04] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
-        flutter_channel: [beta]
+        include:
+          - os: windows-2019
+            setup_desktop_script: .github/scripts/setup_on_windows.sh
+          - os: macos-11
+            setup_desktop_script: .github/scripts/setup_on_macos.sh
+          - os: ubuntu-20.04
+            setup_desktop_script: .github/scripts/setup_on_linux.sh
+
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-        with:
-          channel: ${{ matrix.flutter_channel }}
+      - name: setup flutter channel
+        run: .github/scripts/setup_flutter_channel.sh
+      - name: setup flutter desktop
+        shell: bash
+        run: ${{ matrix.setup_desktop_script }}
       - name: doctor
         run: flutter doctor -v
       - name: install dependencies
