--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -36,7 +36,7 @@ jobs:
         include:
           - os: windows-2019
             setup_desktop_script: .github/scripts/setup_on_windows.sh
-            driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d windows
+            driver_test_command: flutter test integration_test -d windows
           - os: macos-11
             setup_desktop_script: .github/scripts/setup_on_macos.sh
             driver_test_command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d macos
