--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -90,7 +90,7 @@ jobs:
         with:
           timeout_minutes: 5
           max_attempts: 3
-          command: flutter test intergration_test --verbose --coverage --coverage-path=./coverage/lcov.info
+          command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.info
       - uses: codecov/codecov-action@v2.1.0
         with:
           file: ./coverage/lcov.info
